--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -3,4 +3,5 @@ $white: #fff
 $black: #000
 
 // 2. Typography
-
+$main: 'Poppins', 'Helvetica Neue', 'Helvetica', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, sans-serif
+$mono: 'Roboto Mono', monospaced
