--- a/index.pug
+++ b/index.pug
@@ -19,6 +19,53 @@ html(lang='pt-br')
     //- Scripts are places at the end of body for performance reasons
 
   body
+    .line
+
+      .item.devinsanta
+        .item__filter
+        a.item__link(href="http://devinsanta.github.io/", target="_blank", rel="noopener")
+
+          div.item__text
+            span.item__number 01
+            h2.item__title Devinsanta
+              br
+              | dev meetup
+
+          img.item__img(src="assets/img/devinsanta.png", alt="")
+
+          span.item__role UI &amp; Front-end
+
+
+      .item.espaco-ki
+        .item__filter
+        a.item__link(href="http://espacokisantarem.com.br/", target="_blank", rel="noopener")
+
+          div.item__text
+            span.item__number 02
+            h2.item__title Espaço KI
+              br
+              | Santarém
+
+          img.item__img(src="assets/img/espacoKI.png", alt="")
+
+          span.item__role Front-end @ Reator Digital
+
+
+      .item.few
+        .item__filter
+        a.item__link(href="http://devinsanta.github.io/", target="_blank", rel="noopener")
+
+          div.item__text
+            span.item__number 03
+            h2.item__title Front-end
+              br
+              | Week SP
+              br
+              | 2018
+
+          img.item__img(src="assets/img/few.png", alt="")
+
+          span.item__role UI &amp; Front-end
 
     //- JS scripts
     //- ===================================
@@ -28,3 +75,6 @@ html(lang='pt-br')
   //- ===================================
   link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css')
   link(rel='stylesheet', href='assets/css/style.min.css')
+
+  link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Roboto+Mono")
+  link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Poppins:600")
