--- a/index.pug
+++ b/index.pug
@@ -2,13 +2,16 @@ doctype html
 html(lang='pt-br')
   head
     meta(charset='utf-8')
-    meta(name='description', content='')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0, user-scalable=no')
+    meta(itemprop='name', content='Portfolio - Ricardo Gouveia - Front end developer & UI/UX designer')
+    meta(name='description', itemprop='description', content='Site de um desenvolvedor e designer que abre o Sketch só pra se distrair')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='format-detection', content='telephone=no')
+    meta(name='theme-color', content='#4ecdc4')
 
     //- Title
     //- ===================================
-    title
+    title Portfolio - Ricardo Gouveia - Front end developer &amp; UI/UX designer
+
 
     //- Favicon and SVG logo
     //- ===================================
@@ -19,7 +22,7 @@ html(lang='pt-br')
     //- Scripts are places at the end of body for performance reasons
 
   body
-    .line
+    .container
 
       .item.devinsanta
         .item__filter
