Color and variables ajustments

--- a/assets/sass/partials/_items.sass
+++ b/assets/sass/partials/_items.sass
@@ -4,8 +4,8 @@
     width: 90%
 
   &:hover
-    background-color: #719742
-    border-right: 1px solid #719742
+    background-color: $devinsanta
+    border-right: 1px solid $devinsanta
 
     .item__img
       transform: translateX(30%)
@@ -18,8 +18,8 @@
     width: 100%
 
   &:hover
-    background-color: #E7A75C
-    border-right: 1px solid #E7A75C
+    background-color: $espaco-ki
+    border-right: 1px solid $espaco-ki
 
     .item__img
       transform: translateX(30%)
@@ -32,8 +32,36 @@
     width: 40%
 
   &:hover
-    background-color: #CB6A47
-    border-right: 1px solid #CB6A47
+    background-color: $frontend-week
+    border-right: 1px solid $frontend-week
+
+    .item__img
+      transform: translateX(125%)
+
+
+.lu-vassilak
+  .item__img
+    bottom: 0
+    right: 70
+    width: 40%
+
+  &:hover
+    background-color: $lu-vassilak
+    border-right: 1px solid $lu-vassilak
+
+    .item__img
+      transform: translateX(125%)
+
+
+.seven-dev
+  .item__img
+    bottom: 0
+    right: 70
+    width: 40%
+
+  &:hover
+    background-color: $sevendev
+    border-right: 1px solid $sevendev
 
     .item__img
       transform: translateX(125%)
