--- a/index.pug
+++ b/index.pug
@@ -70,6 +70,37 @@ html(lang='pt-br')
 
           span.item__role UI &amp; Front-end
 
+
+      .item.lu-vassilak
+        .item__filter
+        a.item__link(href="http://luvassilak.com.br/", target="_blank", rel="noopener")
+
+          div.item__text
+            span.item__number 04
+            h2.item__title Luciana
+              br
+              | Vassilak
+
+          img.item__img(src="", alt="")
+
+          span.item__role Front-end @ Reator Digital
+
+
+      .item.seven-dev
+        .item__filter
+        a.item__link(href="https://7dev-codestudio.github.io/", target="_blank", rel="noopener")
+
+          div.item__text
+            span.item__number 07
+            h2.item__title 7dev Tapajós
+              br
+              | Code Studio
+
+
+          img.item__img(src="", alt="")
+
+          span.item__role UI &amp; Front-end
+
     //- JS scripts
     //- ===================================
     script(async, src='js/index.min.js')
