--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -2,6 +2,17 @@
 $white: #fff
 $black: #000
 
+$dark-gray:         #4a4a4a
+$light-gray-border: #e2e2e2
+
+$filter: rgba(255, 255, 255, .7)
+
+$devinsanta:    #549b14
+$espaco-ki:     #ffa031
+$frontend-week: #eb5b2e
+$lu-vassilak:   #8f7a25
+$sevendev:      #4a4a4a
+
 // 2. Typography
-$main: 'Poppins', 'Helvetica Neue', 'Helvetica', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, sans-serif
+$main:  'Poppins', 'Helvetica Neue', 'Helvetica', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, sans-serif
 $mono: 'Roboto Mono', monospaced
