Adds scaling to transform hover effect

--- a/assets/sass/partials/_items.sass
+++ b/assets/sass/partials/_items.sass
@@ -1,14 +1,14 @@
 .devinsanta
   .item__img
-    bottom: 12%
-    width: 90%
+    bottom: 13%
+    width: 89%
 
   &:hover
     background-color: $devinsanta
     border-right: 1px solid $devinsanta
 
     .item__img
-      transform: translateX(30%)
+      transform: translateX(20%) scale(1.1)
 
 
 .espaco-ki
@@ -22,13 +22,13 @@
     border-right: 1px solid $espaco-ki
 
     .item__img
-      transform: translateX(30%)
+      transform-origin: bottom right
+      transform: translateX(30%) scale(1.1)
 
 
 .few
   .item__img
     bottom: 0
-    right: 70
     width: 40%
 
   &:hover
@@ -36,7 +36,8 @@
     border-right: 1px solid $frontend-week
 
     .item__img
-      transform: translateX(125%)
+      transform-origin: bottom right
+      transform: translateX(125%) scale(1.1)
 
 
 .lu-vassilak
