Better sass file structure

--- a/assets/sass/partials/_entries.sass
+++ b/assets/sass/partials/_entries.sass
@@ -1,3 +1,8 @@
+//
+//  This file contains styling to a especific portfolio entry.
+//  If you need to change something to affect all items, change in _item.sass
+//
+
 .devinsanta
   .item__img
     bottom: 13%
@@ -22,8 +27,8 @@
     border-right: 1px solid $espaco-ki
 
     .item__img
+      transform: translateX(40%) scale(1.1)
       transform-origin: bottom right
-      transform: translateX(30%) scale(1.1)
 
 
 .few
@@ -36,8 +41,8 @@
     border-right: 1px solid $frontend-week
 
     .item__img
-      transform-origin: bottom right
       transform: translateX(125%) scale(1.1)
+      transform-origin: bottom right
 
 
 .lu-vassilak
