--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -4,5 +4,6 @@
 
 // {other files}
 
-@import partials/portfolio
-@import partials/items
+@import partials/container
+@import partials/item
+@import partials/entries
