--- a/assets/sass/partials/_item.sass
+++ b/assets/sass/partials/_item.sass
@@ -1,9 +1,7 @@
-.container
-  display: flex
-  height: 100vh
-  width: 100%
-  flex-wrap: wrap
-
+//
+//  This file contains default style for portfolio single item.
+//  If you need to change for a single especific entry, change _entries.sass
+//
 
 .item
   background-color: $white
