Adds logo/link to rcrd to top-left fixed position

--- a/assets/sass/partials/_item.sass
+++ b/assets/sass/partials/_item.sass
@@ -19,6 +19,9 @@
     height: 70%
     width: 100%
 
+  @media (min-height: 1000px)
+    height: 50%
+
   &:hover
     .item__filter
       display: none
@@ -88,3 +91,6 @@
   text-transform: uppercase
   transition: opacity .3s ease-in-out
   z-index: 100
+
+  @media (max-width: 1050px)
+    font-size: 1em
