--- a/index.pug
+++ b/index.pug
@@ -22,6 +22,13 @@ html(lang='pt-br')
     //- Scripts are places at the end of body for performance reasons
 
   body
+
+    .logo
+      a.logo__link(href="http://rcrd.me")
+        img.logo__arrow(src="assets/img/left-arrow.svg", alt="")
+        img.logo__img(src="assets/img/logo.svg", alt="")
+
+
     .container
 
       .item.devinsanta
@@ -91,7 +98,7 @@ html(lang='pt-br')
         a.item__link(href="https://7dev-codestudio.github.io/", target="_blank", rel="noopener")
 
           div.item__text
-            span.item__number 07
+            span.item__number 05
             h2.item__title 7dev Tapajós
               br
               | Code Studio
