Changes to lu vassilak photo and transform effect

--- a/assets/sass/partials/_entries.sass
+++ b/assets/sass/partials/_entries.sass
@@ -48,15 +48,15 @@
 .lu-vassilak
   .item__img
     bottom: 0
-    right: 70
-    width: 40%
+    width: 90%
 
   &:hover
     background-color: $lu-vassilak
     border-right: 1px solid $lu-vassilak
 
     .item__img
-      transform: translateX(125%)
+      transform: translateX(30%) scale(1.1)
+      transform-origin: bottom right
 
 
 .seven-dev
@@ -71,3 +71,4 @@
 
     .item__img
       transform: translateX(125%)
+
