--- a/assets/sass/partials/_item.sass
+++ b/assets/sass/partials/_item.sass
@@ -15,9 +15,16 @@
   @media (max-width: 800px)
     width: calc(100% / 2)
 
+    &:nth-child(3n) //not working
+      border-right: 1px solid $light-gray-border
+
+    &:nth-child(2n) //not working
+      border-right: 0
+
   @media (max-width: 500px)
     height: 70%
     width: 100%
+    border-right: 0
 
   @media (min-height: 1000px)
     height: 50%
@@ -36,6 +43,9 @@
     .item__role,
     .item__img
       opacity: 1
+
+  &:nth-child(3n)
+    border-right: 0
 
 
 .item__filter
