--- a/index.pug
+++ b/index.pug
@@ -88,7 +88,7 @@ html(lang='pt-br')
               br
               | Vassilak
 
-          img.item__img(src="", alt="")
+          img.item__img(src="assets/img/lu-vassilak.png", alt="")
 
           span.item__role Front-end @ Reator Digital
 
