Adds image to 7dev

--- a/index.pug
+++ b/index.pug
@@ -104,7 +104,7 @@ html(lang='pt-br')
               | Code Studio
 
 
-          img.item__img(src="", alt="")
+          img.item__img(src="assets/img/7dev.png", alt="")
 
           span.item__role UI &amp; Front-end
 
