--- a/assets/sass/partials/_entries.sass
+++ b/assets/sass/partials/_entries.sass
@@ -61,14 +61,13 @@
 
 .seven-dev
   .item__img
-    bottom: 0
-    right: 70
-    width: 40%
+    bottom: 13%
+    width: 70%
 
   &:hover
     background-color: $sevendev
     border-right: 1px solid $sevendev
 
     .item__img
-      transform: translateX(125%)
+      transform: translateX(40%) scale(1.1)
 
