Fix link for FEW

--- a/index.pug
+++ b/index.pug
@@ -63,7 +63,7 @@ html(lang='pt-br')
 
       .item.few
         .item__filter
-        a.item__link(href="http://devinsanta.github.io/", target="_blank", rel="noopener")
+        a.item__link(href="http://frontendweek.com.br/", target="_blank", rel="noopener")
 
           div.item__text
             span.item__number 03
