Hover style on mobile no-hover devices

--- a/assets/sass/partials/_base.sass
+++ b/assets/sass/partials/_base.sass
@@ -20,7 +20,8 @@ body
   overflow-x: hidden
   overflow-y: auto
   position: relative
-  width: 100vw
+  min-width: 100vw
+
 
 a
   text-decoration: none
