--- a/assets/sass/partials/_overlay.sass
+++ b/assets/sass/partials/_overlay.sass
@@ -11,14 +11,20 @@
   z-index: 1000
 
   @media (max-width: 800px)
-    left: 1em
+    position: absolute
+    left: 0
     opacity: 1
-    top: 1em
+    top: 0
+    width: 100%
+    background-color: $white
 
   @media (max-width: 500px)
+    position: absolute
+    left: 0
+    opacity: 1
+    top: 0
+    width: 100%
     background-color: $white
-    left: .5em
-    top: .5em
 
   &:hover
     opacity: 1
@@ -26,9 +32,12 @@
 .logo__link
   align-items: center
   display: flex
-  height: 120px
+  height: 150px
   padding: .7em
   width: 100%
+
+  @media (max-width: 800px)
+    height: 50px
 
 .logo__arrow
   margin-right: 1em
@@ -38,7 +47,4 @@
   width: 6em
 
   @media (max-width: 800px)
-    width: 5em
-
-  @media (max-width: 500px)
-    width: 3em
+    width: 2.5em
